--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -2,27 +2,35 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.robert.uitracker.app.MainActivity" >
-    <item android:id="@+id/remove_settings"
-        android:title="Hide Image"
+    <item android:id="@+id/remove_bottom_image_settings"
+        android:title="Hide Bottom Image"
         android:orderInCategory="100"
         app:showAsAction="never" />
-    <item android:id="@+id/hide_settings"
+    <item android:id="@+id/remove_top_image_settings"
+          android:title="Hide Top Image"
+          android:orderInCategory="100"
+          app:showAsAction="never" />
+    <item android:id="@+id/hide_touches_settings"
           android:title="Hide Touches"
           android:orderInCategory="100"
           app:showAsAction="never" />
-    <item android:id="@+id/clear_settings"
+    <item android:id="@+id/clear_touches_settings"
           android:title="Clear Touches"
           android:orderInCategory="100"
           app:showAsAction="never" />
-    <item android:id="@+id/load_settings"
-          android:title="Load Image"
+    <item android:id="@+id/load_bottom_image_settings"
+          android:title="Load Bottom Image"
           android:orderInCategory="100"
           app:showAsAction="never" />
-    <item android:id="@+id/size_settings"
+    <item android:id="@+id/load_top_image_settings"
+          android:title="Load Top Image"
+          android:orderInCategory="100"
+          app:showAsAction="never" />
+    <item android:id="@+id/size_mm_settings"
           android:title="Set Image Size mm"
           android:orderInCategory="100"
           app:showAsAction="never" />
-    <item android:id="@+id/sizepx_settings"
+    <item android:id="@+id/size_px_settings"
           android:title="Set Image Size px"
           android:orderInCategory="100"
           app:showAsAction="never" />
